--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
         </button>
       </div>
     </div>
+    
+    <!-- for footer  -->
+    <footer class="footer2"><p>Copyright © 2022 All Rights Reserved</p></footer>
 
     <script src="script.js"></script>
   </body>
