Updates in Copywrite.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     
     <!-- for footer  -->
-    <footer class="footer2"><p>Copyright © 2022 All Rights Reserved</p></footer>
+    <footer class="footer2"><p>Copyright © 2022 All Rights Reserved & Developed by Samrat Ghosh</p></footer>
 
     <script src="script.js"></script>
   </body>
