--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css" />
     <link rel="stylesheet" href="style.css" />
-
+    <link rel="icon" href="./images/FAVICON.png" type="image/x-icon">
     <title>Musica</title>
   </head>
   <body>
