--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             >
           </li>
           <li>
-            <a href="#">
+            <a href="assets/mysongs.html">
               <i class="fas fa-solid fa-star"></i>
               My Songs</a
             >
