my songs button fix
I have fixed the 'My Songs' button, and now the music will continue to play when you visit the 'My Songs' page.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             Home</a>
         </li>
         <li>
-          <a href="#">
+          <a href="./assets/mysongs.html">
             <i class="fas fa-solid fa-star"></i>
             My Songs</a>
         </li>
