Dark Mode Added

--- a/assets/mysongs.html
+++ b/assets/mysongs.html
@@ -47,6 +47,7 @@
             <h4 id="title"></h4>
             <div class="progress-container" id="progress-container">
                 <div class="progress" id="progress"></div>
+                <span id="currTime"></span> / <span id="durTime"></span>
             </div>
         </div>
 
@@ -77,6 +78,11 @@
             <div class="song-duration-head">--:--</div>
         </section>
     </section>
+
+    <!--Theme Change (Dark/Light)-->
+    <div class="theme-button" id="modeToggle">
+        <i class="fas fa-solid fa-moon"></i>
+      </div>
 
     <!-- for footer  -->
     <footer class="footer2">
