Issue No. #49 Fixed.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
   <!-- for footer -->
   <footer class="footer2">
-    <p>Copyright © 2022 All Rights Reserved & Developed by Samrat Ghosh</p>
+    <p>Copyright © <span id="copyright-year"></span> Rights Reserved & Developed by Samrat Ghosh</p>
   </footer>
   <script>
     const hamburger = document.getElementById("hamburger");
@@ -106,6 +106,9 @@
     });
   </script>
   <script src="script.js"></script>
+
+  <!-- Copyright Year --- -->
+  <script src="./copyrightYear.js"></script>
 </body>
 
 </html>
