--- a/assets/mysongs.html
+++ b/assets/mysongs.html
@@ -34,10 +34,10 @@
                 </li>
                 <li class="usr">
                     <div class="nav-links">
-                      <a href="pages/login.html">
+                      <a href="../pages/login.html">
                         <i class="fas fa-solid fa-user"></i>
                       </a>
-                      <a href="pages/signup.html">
+                      <a href="../pages/signup.html">
                         <i class="fas fa-sign-out-alt"></i>
                       </a>
                     </div>
@@ -46,10 +46,10 @@
         </nav>
 
         <div class="nav-links" id="login-links">
-            <a href="pages/login.html">
+            <a href="../pages/login.html">
               <i class="fas fa-solid fa-user"></i>
             </a>
-            <a href="pages/signup.html">
+            <a href="../pages/signup.html">
               <i class="fas fa-sign-out-alt"></i>
             </a>
           </div>
