Dark Mode Update

--- a/index.html
+++ b/index.html
@@ -36,17 +36,23 @@
             Liked Song</a>
         </li>
         <li class="usr">
-          <div>
+          <a href="pages/login.html">
             <i class="fas fa-solid fa-user"></i>
+          </a>
+          <a href="pages/signup.html">
             <i class="fas fa-sign-out-alt"></i>
-          </div>
+          </a>
         </li>
       </ul>
     </nav>
 
-    <div class="user">
-      <i class="fas fa-solid fa-user"></i>
-      <i class="fas fa-sign-out-alt"></i>
+    <div class="nav-links" id="login-links">
+      <a href="pages/login.html">
+        <i class="fas fa-solid fa-user"></i>
+      </a>
+      <a href="pages/signup.html">
+        <i class="fas fa-sign-out-alt"></i>
+      </a>
     </div>
 
     <div class="hamburger" id="hamburger">
@@ -68,9 +74,9 @@
   <div class="music-container" id="music-container">
     <div class="music-info">
       <h4 id="title"></h4>
+      <span id="currTime"></span> / <span id="durTime"></span>
       <div class="progress-container" id="progress-container">
         <div class="progress" id="progress"></div>
-        <span id="currTime"></span> / <span id="durTime"></span>
       </div>
     </div>
 
