title of the page changed & icons added

--- a/pages/signup.html
+++ b/pages/signup.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="../styles/signup.css" />
-    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
+    />
+    <title>Singup</title>
   </head>
   <body>
     <div class="main">
@@ -15,9 +19,11 @@
         </div>
         <div class="input_container">
           <div class="group">
+            <i class="fas fa-solid fa-user icon"></i>
             <input class="input" type="text" placeholder="username" />
           </div>
           <div class="group">
+            <i class="fas fa-solid fa-envelope icon"></i>
             <input class="input" type="email" placeholder="email" />
           </div>
           <div class="group">
@@ -50,7 +56,11 @@
                 stroke-linecap="round"
               ></path>
             </svg>
-            <input class="input" type="password" placeholder="confirm password" />
+            <input
+              class="input"
+              type="password"
+              placeholder="confirm password"
+            />
           </div>
         </div>
         <div>
