--- a/pages/signup.html
+++ b/pages/signup.html
@@ -4,59 +4,64 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="../styles/signup.css" />
-    <title>Document</title>
+    <title>SignUp</title>
   </head>
   <body>
     <div class="main">
-      <div class="container">
+      <div class="container signup_form">
         <div class="signup_container">
           <img src="../images/user-picture.png" alt="logo" class="logo" />
           <span>Sign Up</span>
         </div>
-        <div class="input_container">
-          <div class="group">
-            <input class="input" type="text" placeholder="username" />
+        <form id="signup_form">
+          <div class="input_container">
+            <div class="group">
+              <input class="input" type="text" placeholder="username" />
+            </div>
+            <div class="group">
+              <input class="input" type="email" id="email" placeholder="Email" required />
+            </div>
+            <div class="group">
+              <svg
+                stroke="currentColor"
+                stroke-width="1.5"
+                viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg"
+                class="icon"
+              >
+                <path
+                  d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z"
+                  stroke-linejoin="round"
+                  stroke-linecap="round"
+                ></path>
+              </svg>
+              <input class="input" type="password" id="password" placeholder="password" required />
+            </div>
+            <div class="group">
+              <svg
+                stroke="currentColor"
+                stroke-width="1.5"
+                viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg"
+                class="icon"
+              >
+                <path
+                  d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z"
+                  stroke-linejoin="round"
+                  stroke-linecap="round"
+                ></path>
+              </svg>
+              <input class="input" type="password" id="confirm_password" placeholder="confirm password" required />
+            </div>
+            <div>
+              <button class="signup_btn" type="submit">Sign Up</button>
+            </div>
           </div>
-          <div class="group">
-            <input class="input" type="email" placeholder="email" />
-          </div>
-          <div class="group">
-            <svg
-              stroke="currentColor"
-              stroke-width="1.5"
-              viewBox="0 0 24 24"
-              xmlns="http://www.w3.org/2000/svg"
-              class="icon"
-            >
-              <path
-                d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z"
-                stroke-linejoin="round"
-                stroke-linecap="round"
-              ></path>
-            </svg>
-            <input class="input" type="password" placeholder="password" />
-          </div>
-          <div class="group">
-            <svg
-              stroke="currentColor"
-              stroke-width="1.5"
-              viewBox="0 0 24 24"
-              xmlns="http://www.w3.org/2000/svg"
-              class="icon"
-            >
-              <path
-                d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z"
-                stroke-linejoin="round"
-                stroke-linecap="round"
-              ></path>
-            </svg>
-            <input class="input" type="password" placeholder="confirm password" />
-          </div>
-        </div>
-        <div>
-          <button class="signup_btn">Sign Up</button>
-        </div>
+        </form>
       </div>
     </div>
+
+    <!-- Include the separate JavaScript file -->
+    <script src="signup.js"></script>
   </body>
 </html>
