fix/navbar make more attractive

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <nav class="nav-container">
       <ul class="nav-links">
         <li>
-          <a href="#">
-            <i class="fas fa-home"></i>
+          <a href="#" class="atag">
+            <i class="fas fa-home hoverTag"></i>
             Home</a>
         </li>
         <li>
