adding changes uptill now

--- a/assets/mysongs.html
+++ b/assets/mysongs.html
@@ -41,7 +41,7 @@
         </div>
     </header>
 
-    
+
     <div class="music-container" id="music-container">
         <div class="music-info">
             <h4 id="title"></h4>
@@ -66,6 +66,7 @@
                 <i class="fas fa-forward"></i>
             </button>
             <input type="range" id="volumeSlider" min="0" max="1" step="0.01" value="1" oninput="setVolume(this.value)">
+            <button id="like"><i class="fas fa-solid fa-heart"></i></button>
         </div>
     </div>
 
