--- a/index.html
+++ b/index.html
@@ -90,6 +90,8 @@
         <i class="fas fa-forward"></i>
       </button>
       <input type="range" id="volumeSlider" min="0" max="1" step="0.01" value="1" oninput="setVolume(this.value)">
+      <a href="#">
+        <i class="fas fa-solid fa-heart"></i></a>
     </div>
   </div>
 
