--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             My Songs</a>
         </li>
         <li>
-          <a href="#">
+          <a href="./assets/likedsongs.html">
             <i class="fas fa-solid fa-heart"></i>
             Liked Song</a>
         </li>
@@ -96,8 +96,6 @@
         <i class="fas fa-forward"></i>
       </button>
       <input type="range" id="volumeSlider" min="0" max="1" step="0.01" value="1" oninput="setVolume(this.value)">
-      <a href="#">
-        <i class="fas fa-solid fa-heart"></i></a>
     </div>
   </div>
 
