Revert "52 adding a like button"

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             My Songs</a>
         </li>
         <li>
-          <a href="./assets/likedsongs.html">
+          <a href="#">
             <i class="fas fa-solid fa-heart"></i>
             Liked Song</a>
         </li>
