--- a/pages/forgetpassword.html
+++ b/pages/forgetpassword.html
@@ -4,24 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="../styles/login.css" />
-    <title>Document</title>
+    <title>Forgot Password</title>
   </head>
   <body>
     <div class="main">
       <div class="container">
         <div class="login_container">
-          <img src="../images/user-picture.png" alt="logo" class="logo" />
-          <span>Login</span>
+          <img src="../images/forget.jpg" alt="logo" class="logo" />
+          <span>Forgot Password</span>
         </div>
         <div class="input_container">
-          <div class="group">
-            <input class="input" type="email" placeholder="email" />
-          </div>
           <div class="group">
             <svg
               stroke="currentColor"
               stroke-width="1.5"
-              viewBox="0 0 24 24"
+              viewBox="0 0 25 25"
               xmlns="http://www.w3.org/2000/svg"
               class="icon"
             >
@@ -31,17 +28,30 @@
                 stroke-linecap="round"
               ></path>
             </svg>
-            <input class="input" type="password" placeholder="password" />
+            <input class="input" type="password" placeholder="Password" />
           </div>
-          <div>
-            <button class="login_btn">Log In</button>
-          </div>
-          <div>
-            <span
-              ><a class="forget_link" href="forgetpassword.html"
-                >Forget Password?</a
-              ></span
+          <div class="group">
+            <svg
+              stroke="currentColor"
+              stroke-width="1.5"
+              viewBox="0 0 25 25"
+              xmlns="http://www.w3.org/2000/svg"
+              class="icon"
             >
+              <path
+                d="M16.5 10.5V6.75a4.5 4.5 0 10-9 0v3.75m-.75 11.25h10.5a2.25 2.25 0 002.25-2.25v-6.75a2.25 2.25 0 00-2.25-2.25H6.75a2.25 2.25 0 00-2.25 2.25v6.75a2.25 2.25 0 002.25 2.25z"
+                stroke-linejoin="round"
+                stroke-linecap="round"
+              ></path>
+            </svg>
+            <input
+              class="input"
+              type="password"
+              placeholder="Confirm Password"
+            />
+          </div>
+          <div>
+            <button class="reset_btn">Reset Password</button>
           </div>
         </div>
       </div>
