automatically updates the year

--- a/assets/mysongs.html
+++ b/assets/mysongs.html
@@ -107,7 +107,7 @@
 
     <!-- for footer  -->
     <footer class="footer2">
-        <p>Copyright © 2022 All Rights Reserved & Developed by Samrat Ghosh</p>
+        <p>Copyright © <span id="currentYear"></span> All Rights Reserved & Developed by Samrat Ghosh</p>
     </footer>
 
     <script>
