email icon and title changed

--- a/pages/login.html
+++ b/pages/login.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" type="text/css" href="../styles/login.css" />
-    <title>Document</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"
+    />
+    <title>Login</title>
   </head>
   <body>
     <div class="main">
@@ -15,6 +19,7 @@
         </div>
         <div class="input_container">
           <div class="group">
+            <i class="fas fa-solid fa-envelope icon"></i>
             <input class="input" type="email" placeholder="email" />
           </div>
           <div class="group">
